// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit page form layouts should contain slots if they were provided 1`] = `
<form
  action={undefined}
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="field"
  >
    <label>
      Title
    </label>
    <div
      className="ui divided two column grid"
    >
      <div
        className="row"
      >
        <div
          className="twelve wide column"
        >
          <input />
        </div>
        <div
          className="four wide column"
        >
          <a
            href={undefined}
            onClick={[Function]}
          >
            <button
              className="ui fluid button"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              tabIndex={undefined}
              type="button"
            >
              View
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="field"
  >
    <label>
      Description
    </label>
    <textarea
      placeholder="Enter your description here (Markdown supported)"
    />
  </div>
  <div
    className="field"
  >
    <label>
      Privacy
    </label>
    <div
      className="fields"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <div
        className="ui checked radio checkbox"
        data-test="privacy-public"
        onChange={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
        style={
          Object {
            "paddingRight": "1em",
          }
        }
      >
        <input
          checked={true}
          className="hidden"
          id={undefined}
          name="docPrivacyEditorRadioGroup"
          onClick={[Function]}
          readOnly={true}
          tabIndex={0}
          type="radio"
          value="public"
        />
        <label
          htmlFor={undefined}
        >
          Public
        </label>
      </div>
      <div
        className="ui radio checkbox"
        data-test="privacy-private"
        onChange={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <input
          checked={false}
          className="hidden"
          id={undefined}
          name="docPrivacyEditorRadioGroup"
          onClick={[Function]}
          readOnly={true}
          tabIndex={0}
          type="radio"
          value="private"
        />
        <label
          htmlFor={undefined}
        >
          Private
        </label>
      </div>
    </div>
  </div>
  <div
    className="field"
  >
    <label>
      Preview
    </label>
    <div>
      Preview
    </div>
  </div>
  <div
    className="field"
  >
    <label />
    <div />
  </div>
  <div
    className="field"
  >
    <label>
      References 
      <i
        aria-hidden="true"
        className="info circle icon"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </label>
    <div>
      References
    </div>
  </div>
  <div
    className="inline field"
  >
    <label>
      Collaborators 
      <i
        aria-hidden="true"
        className="info circle icon"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </label>
  </div>
</form>
`;

exports[`edit page form layouts should not contain slots if they were not provided 1`] = `
<form
  action={undefined}
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="field"
  >
    <label>
      Title
    </label>
    <div
      className="ui divided two column grid"
    >
      <div
        className="row"
      >
        <div
          className="twelve wide column"
        >
          <input />
        </div>
        <div
          className="four wide column"
        >
          <a
            href={undefined}
            onClick={[Function]}
          >
            <button
              className="ui fluid button"
              disabled={undefined}
              onClick={[Function]}
              role="button"
              tabIndex={undefined}
              type="button"
            >
              View
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    className="field"
  >
    <label>
      Description
    </label>
    <textarea
      placeholder="Enter your description here (Markdown supported)"
    />
  </div>
  <div
    className="field"
  >
    <label>
      Privacy
    </label>
    <div
      className="fields"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <div
        className="ui checked radio checkbox"
        data-test="privacy-public"
        onChange={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
        style={
          Object {
            "paddingRight": "1em",
          }
        }
      >
        <input
          checked={true}
          className="hidden"
          id={undefined}
          name="docPrivacyEditorRadioGroup"
          onClick={[Function]}
          readOnly={true}
          tabIndex={0}
          type="radio"
          value="public"
        />
        <label
          htmlFor={undefined}
        >
          Public
        </label>
      </div>
      <div
        className="ui radio checkbox"
        data-test="privacy-private"
        onChange={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
      >
        <input
          checked={false}
          className="hidden"
          id={undefined}
          name="docPrivacyEditorRadioGroup"
          onClick={[Function]}
          readOnly={true}
          tabIndex={0}
          type="radio"
          value="private"
        />
        <label
          htmlFor={undefined}
        >
          Private
        </label>
      </div>
    </div>
  </div>
  <div
    className="field"
  >
    <label />
    <div />
  </div>
  <div
    className="inline field"
  >
    <label>
      Collaborators 
      <i
        aria-hidden="true"
        className="info circle icon"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      />
    </label>
  </div>
</form>
`;
